pkg/i2gw/implementations/kgateway/testing/testdata/input/basic_auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress2gateway.kubernetes.io/implementation: kgateway
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "default/basic-auth-secret"
  name: ingress-basic-auth-file-default
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: app1.example.org
    http:
      paths:
      - backend:
          service:
            name: app1
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress2gateway.kubernetes.io/implementation: kgateway
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "default/basic-auth-secret"
    nginx.ingress.kubernetes.io/auth-secret-type: "auth-file"
  name: ingress-basic-auth-file-explicit
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: app2.example.org
    http:
      paths:
      - backend:
          service:
            name: app2
            port:
              number: 80
        path: /
        pathType: Prefix
---
