pkg/i2gw/implementations/kgateway/testing/testdata/input/service_upstream.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress2gateway.kubernetes.io/implementation: kgateway
    nginx.ingress.kubernetes.io/service-upstream: "true"
  name: ingress-myservicea1
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: myservicea.foo.org
    http:
      paths:
      - backend:
          service:
            name: myservicea
            port:
              number: 80
        path: /
        pathType: Prefix
---
# No service-upstream annotation here so a Backend won't be created for this Ingress.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress2gateway.kubernetes.io/implementation: kgateway
  name: ingress-myservicea2
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: myservicea.foo.org
    http:
      paths:
      - backend:
          service:
            name: myservicea
            port:
              number: 80
        path: /2
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress2gateway.kubernetes.io/implementation: kgateway
    nginx.ingress.kubernetes.io/service-upstream: "true"
  name: ingress-myserviceb
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: myserviceb.foo.org
    http:
      paths:
      - backend:
          service:
            name: myserviceb
            port:
              number: 80
        path: /
        pathType: Prefix
